<resources>
    <string name="app_name">ScanPal</string>
    <string name="addUsername">Username</string>
    <string name="addFirstName">Enter First Name</string>
    <string name="addLastName">Enter Last Name</string>
    <string name="continueButton">Continue</string>
    <string name="addUserImage">User Image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="trackLocation">Track Location?</string>
    <string name="cancel_rsvp">Cancel RSVP</string>
    <string name="join_event">Signup</string>
    <string name="content_description">image</string>
    <string name="event">Event</string>
    <string name="attendee">Attendee</string>
    <string-array name="browser_select_array">
        <item>Events Browser</item>
        <item>Image Browser</item>
        <item>Profile Browser</item>
    </string-array>
</resources>